1BRC showcase + non-JIT buffer perf (unchecked-loop, bulk hashCode, native cinterop hashRange, JVM FFM direct-buffer fast path) (#189)
* feat(1brc): KMP One Billion Row Challenge showcase module

Adds :buffer-1brc demonstrating ReadBuffer primitives on the 1BRC:
- hashRange (BufferHash.kt) and readFixedDecimalTenths (DecimalParse.kt)
- JVM worker path with mmap (1B rows in ~2.59s)
- common core: StationTable, KeyArena, Chunk splitting
- native/js/wasm actuals (in progress)

* fix(1brc): wire public ReadBuffer primitives + register module

The showcase referenced ReadBuffer.hashRange/hash64/regionEquals and
readFixedDecimalTenths/readSignedInt/readDecimalAsLong, but only the
internal inline helpers existed and :buffer-1brc was never in settings.
- add the public ReadBuffer extension functions bridging to the helpers
- register :buffer-1brc in settings.gradle.kts
- add androidx-collection 1.6.0 to the version catalog

JVM green: BufferHashTest 10/10, DecimalParseTest 14/14, 1brc 8/8.

* perf(1brc): reuse Dispatchers.Default pool in JVM runChunks (~15% faster)

The JVM actual created and tore down a fresh newFixedThreadPool on every
solve() call — 24 OS-thread spawns per op dominated the small-file
benchmark. Switch to coroutines Dispatchers.Default (a single long-lived
pool sized to the core count), identical to the native actual, so the pool
is reused across solves. No lazy/manual pool management.

jvmBenchmarkFullBenchmark (1M rows, 3w+5i, avgt):
  before: 5.126 ± 0.152 ms/op
  after:  4.331 ± 0.505 ms/op  (~15% faster)

1brc jvmTest 8/8 green, ktlint clean.

* chore(1brc): add --repeat + JFR hooks to onebrcRun for warm timing/profiling

--repeat N re-solves in one JVM (warm steady-state timing, more profiler
samples); -Ponebrc.jfr=<path> attaches a JFR profile recording.

Confirmed headline on this box: 13.25GB warm ~2.0s @ ~6600 MB/s (24 cores),
beating the documented 2.59s. JFR: hot loop is allocation-free (1 GC pause
in 24s); CPU split indexOf 25% / map.get 23% 